# LayerMCP

./: .gitignore  LICENSE  README.md  download_qwen36.sh  env.narval.sh  job_all_qwen.sh  job_qwen_math_public.sh  pyproject.toml  requirements.txt
analysis/: __init__.py  gpt_oss_surgery.py  logit_lens.py
benchmark/: README.md  __init__.py  pyproject.toml  tool_routing.json  tool_routing.jsonl  tool_routing_controlled.json  tool_routing_deepseek_tiny.json  tool_routing_phase2_seed.json  tool_routing_smoke.json
benchmark/coding/: README.md  tool_routing_coding_codesearchnet_public_derived.json  tool_routing_coding_controlled.json  tool_routing_coding_smoke.json  tool_routing_coding_sweagent_multistep.json  tool_routing_coding_upstream_inspired.json
benchmark/coding/fixtures/: CODESEARCHNET_ATTRIBUTION.md  SWEAGENT_MARSHMALLOW_1867_ATTRIBUTION.md  codesearchnet_public_annotations.json  sweagent_marshmallow_1867.json
benchmark/enterprise/: README.md  tool_routing_enterprise_public_adapted.json  tool_routing_enterprise_v1.json  tool_routing_enterprise_v2_controlled.json
benchmark/finance/: README.md  tool_routing_finance_controlled.json  tool_routing_finance_convfinqa_multistep.json  tool_routing_finance_public_derived.json  tool_routing_finance_smoke.json  tool_routing_finance_tatqa_public_derived.json  tool_routing_finance_upstream_inspired.json
benchmark/finance/fixtures/: CONVFINQA_ATTRIBUTION.md  TATQA_ATTRIBUTION.md  convfinqa_dev_cells.json  finqa_public_test_cells.json  tatqa_public_test_gold_cells.json
benchmark/math/: README.md  tool_routing_math_controlled.json  tool_routing_math_public_derived.json  tool_routing_math_v1.json  tool_routing_math_v2_controlled.json
benchmark/mcpbench/: __init__.py  cli.py  client.py  runner.py  schema.py
docs/: benchmark_source_plan.md  current_phase1_status.md  deepseek_implementation_plan.md  model_loading_plan.md  model_surgery_integration_plan.md  phase2_candidate_cases.md  phase2_logit_lens_initial.md  tool_and_dataset_audit.md  tool_fixture_ground_truth.md
evaluation/: __init__.py  dataset.py  evaluate.py
mcp_server/: __init__.py  coding_state.py  coding_tools.py  enterprise_tools.py  finance_state.py  finance_tools.py  math_tools.py  retail_state.py  retail_tools.py  server.py  tool_impls.py
models/: __init__.py  deepseek_model_surgery_router.py  model_loader.py  qwen_router.py
tests/: __init__.py  test_coding_benchmarks.py  test_coding_multistep_benchmark.py  (+17 more)
(+37 files in other folders)
