[project]
name = "mcpbench"
version = "0.1.0"
description = "MCP tool-selection benchmark harness for the LayerMCP research project"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.scripts]
mcpbench = "mcpbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpbench"]
